--- a/randomquotes/src/assets/styles/scss/abstracts/_variables.scss
+++ b/randomquotes/src/assets/styles/scss/abstracts/_variables.scss
@@ -3,6 +3,8 @@
 // *********************************
 $main-color: #F3FFBD;
 $secondary-color: #FF1654;
+$additional-color: #808080;
+$twitter-color: #00aced;
 
 // *********************************
 // Font
