--- a/randomquotes/src/assets/styles/scss/components/_footer.scss
+++ b/randomquotes/src/assets/styles/scss/components/_footer.scss
@@ -1,21 +1,17 @@
 // *********************************
-// Nav
+// Footer
 // *********************************
 
-.nav {
+.footer {
   position: absolute;
-  top: 0;
+  bottom: 0;
   width: 100%;
 
-  .logo {
-    padding-top: 20px;
+  &__info {
     text-align: center;
-    font-size: 5em;
+    padding-bottom: 20px;
+    font-size: 1em;
     font-weight: 400;
-    color: $secondary-color;
-
-    &__bold {
-      font-weight: 900;
-    }
+    color: $additional-color;
   }
 }
