--- a/randomquotes/src/assets/styles/scss/pages/_app.scss
+++ b/randomquotes/src/assets/styles/scss/pages/_app.scss
@@ -3,7 +3,10 @@
 // *********************************
 
 .app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
-  background: $main-color;
+  background-color: $main-color;
 }
