--- a/randomquotes/src/assets/styles/scss/components/_quotesContainer.scss
+++ b/randomquotes/src/assets/styles/scss/components/_quotesContainer.scss
@@ -7,12 +7,36 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  width: 800px;
-  height: 400px;
+  width: 600px;
+  height: 300px;
   padding: 30px;
   margin: 0 auto;
   border-radius: 20px;
   background-color: $secondary-color;
+
+  .quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    padding-bottom: 10px;
+    color: $text-color;
+    text-align: center;
+
+    .quote-text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      font-size: 1.5em;
+      font-weight: 300;
+    }
+
+    .quote-footer{
+      height: auto;
+      margin-top: 10px;
+    }
+  }
 
   .menu {
     display: flex;
@@ -20,10 +44,23 @@
     align-items: center;
     width: 100%;
     height: 50px;
+    min-height: 50px;
 
     .new_quote {
       height: 100%;
       width: 100px;
+      background: transparent;
+      color: $main-color;
+      border: 2px solid $main-color;
+      border-radius: 5px;
+      font-weight: 400;
+      font-size: 1em;
+      transition: all 0.5s ease;
+
+      &:hover {
+        background: $main-color;
+        color: $secondary-color;
+      }
     }
 
     .share_twitt {
