--- a/randomquotes/src/assets/styles/scss/components/_nav.scss
+++ b/randomquotes/src/assets/styles/scss/components/_nav.scss
@@ -10,9 +10,13 @@
   .logo {
     padding-top: 20px;
     text-align: center;
-    font-size: 4em;
+    font-size: 3em;
     font-weight: 400;
     color: $secondary-color;
+
+    @include respond-at-height(500px){
+      color: $main-color;
+    }
 
     &__bold {
       font-weight: 900;
