--- a/randomquotes/src/assets/styles/scss/abstracts/_mixins.scss
+++ b/randomquotes/src/assets/styles/scss/abstracts/_mixins.scss
@@ -1,3 +1,7 @@
-@mixin respond-at($media) {
+@mixin respond-at-width($media) {
   @media only screen and (max-width: $media){ @content; }
+}
+
+@mixin respond-at-height($media) {
+  @media only screen and (max-height: $media){ @content; }
 }
