--- a/randomquotes/src/assets/styles/scss/components/_quotesContainer.scss
+++ b/randomquotes/src/assets/styles/scss/components/_quotesContainer.scss
@@ -14,6 +14,13 @@
   border-radius: 20px;
   background-color: $secondary-color;
 
+  @include respond-at-height(500px){
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    padding: 30px 30px 70px 30px;
+  }
+
   .quote {
     display: flex;
     flex-direction: column;
@@ -30,6 +37,10 @@
       height: 100%;
       font-size: 1.5em;
       font-weight: 300;
+
+      @include respond-at-height(500px){
+        margin-top: 40px;
+      }
     }
 
     .quote-footer{
