--- a/src/assets/styles/scss/components/_quotesContainer.scss
+++ b/src/assets/styles/scss/components/_quotesContainer.scss
@@ -41,6 +41,10 @@
       @include respond-at-height(500px){
         margin-top: 40px;
       }
+
+      @include respond-at-height(300px){
+        margin-top: 0;
+      }
     }
 
     .quote-footer{
