--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -110,6 +110,7 @@ body {
         background: #F3FFBD;
         color: #FF1654; }
     .quotesContainer .menu .share_twitt {
+      display: block;
       width: 50px;
       height: 100%;
       background-color: #00aced; }
