--- a/src/assets/styles/scss/components/_quotesContainer.scss
+++ b/src/assets/styles/scss/components/_quotesContainer.scss
@@ -79,6 +79,7 @@
     }
 
     .share_twitt {
+      display: block;
       width: 50px;
       height: 100%;
       background-color: $twitter-color;
